# libduc

./: .dockerignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  libduc-static.pc.in  libduc.pc.in
examples/: array.c  binary.c  fs-file.c  fs-path.c  map.c  testing.c
include/: duc.h
include/duc/: array.h  binary.h  common.h  fs.h  helpers.h  map.h  testing.h  time.h
scripts/: generate-narg.py  mount-git-hooks.sh
src/: array.c  array.h  binary.c  binary.h  common.c  fs.c  fs.h  map.c  map.h  time.c
tests/: array-test.c  binary-test.c  common-test.c  fs-test.c  map-test.c  time-test.c
